--- a/uu/aria.html
+++ b/uu/aria.html
@@ -45,6 +45,7 @@ example of alertdialog
 
 aria-hidden="true"
 used on elements that are to be hidden from aria, their text/label is not read by the screen reader
+and their functionality can not be activated (links cannot be clicked etc)
 
 
 
